[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
reqwest="0.11.22"
chrono="0.4.31"
openssl = { version = "0.10.61", features = ["vendored"] }


[[bin]]
name = "server"
path = "src/main.rs"