[package]
name = "iptv-checker"
version = "2.15.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
reqwest = "0.11.22"
chrono = "0.4.31"
openssl = { version = "0.10.61", features = ["vendored"] }
clap = { version = "4.4.11", features = ["derive"] }
time = "0.3.30"
tokio = "1.35.0"
nix = "0.27.1"
log = "0.4.20"
url = "2.5.0"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
# 只在Windows平台上使用的依赖项

[target.'cfg(not(windows))'.dependencies]
daemonize = "0.5.0"  # 在非Windows平台上使用的依赖项版本号